--- a/calculator.html
+++ b/calculator.html
@@ -9,7 +9,9 @@ function square() {
 </script>
 </head>
 <body>
-  Number:
+
+  <h1>"Calculadora de I Sánchez"</h1>
+  Number: módulo 7
   <input type="text" id="n1"><p>
 
   <button onclick="square()"> x<sup>2</sup> </button>
